fixed HTML validator errors

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="initial-scale=1.0"/>
-        <title></title>
+        <title>Mottox Capstone Project</title>
         <link rel="stylesheet" type="text/css" href="styles/reset.css"/>
         <link rel="stylesheet" type="text/css" href="styles/fonts.css"/>
         <link rel="stylesheet" type="text/css" href="styles/style.css"/>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
-        <script type="text/javascript" src="scripts/script.js"></script>
+        <script src="scripts/script.js"></script>
     </head>
     <body>
         <nav>
@@ -143,11 +143,11 @@
                         <h3>CR10EK Ngk Yamaha YZF-R6</h3>
                         <p class="product-state">New</p>
                         <p class="product-location"><b>From</b> San Fransisco California</p>
+                    </a>
                         <div class="product-price-section flex">
                             <button type="button"><b>+</b></button>
                             <p class="product-price"><a href="#">$25</a></p>
                         </div>
-                    </a>
                 </div>
                 <div class="product">
                     <a class="flex" href="#">
@@ -155,11 +155,11 @@
                         <h3>Denali Soundbomb Compact Air horn</h3>
                         <p class="product-state">New</p>
                         <p class="product-location"><b>From</b> San Fransisco California</p>
+                    </a>
                         <div class="product-price-section flex">
                             <button type="button"><b>+</b></button>
                             <p class="product-price"><a href="#">$80</a></p>
                         </div>
-                    </a>
                 </div>
                 <div class="product">
                     <a class="flex" href="#">
@@ -167,11 +167,11 @@
                         <h3>Rowe Electronics PDM60 Power Distribution Module</h3>
                         <p class="product-state">New</p>
                         <p class="product-location"><b>From</b> San Fransisco California</p>
+                    </a>
                         <div class="product-price-section flex">
                             <button type="button"><b>+</b></button>
                             <p class="product-price"><a href="#">$250</a></p>
                         </div>
-                    </a>
                 </div>
                 <div class="product">
                     <a class="flex" href="#">
@@ -179,11 +179,11 @@
                         <h3>Yuasa AGM Battery</h3>
                         <p class="product-state">New</p>
                         <p class="product-location"><b>From</b> San Fransisco California</p>
+                    </a>
                         <div class="product-price-section flex">
                             <button type="button"><b>+</b></button>
                             <p class="product-price"><a href="#">$100</a></p>
                         </div>
-                    </a>
                 </div>
             </section>
             <div class="section-header flex">
@@ -197,11 +197,11 @@
                         <h3>Boyesen Factory Racing Spectra Clutch Cover</h3>
                         <p class="product-state">New</p>
                         <p class="product-location"><b>From</b> San Fransisco California</p>
+                    </a>
                         <div class="product-price-section flex">
                             <button type="button"><b>+</b></button>
                             <p class="product-price"><a href="#">$150</a></p>
                         </div>
-                    </a>
                 </div>
                 <div class="product">
                     <a class="flex" href="#">
@@ -209,11 +209,11 @@
                         <h3>Boyesen Spectra Supercooler Kit</h3>
                         <p class="product-state">New</p>
                         <p class="product-location"><b>From</b> San Fransisco California</p>
+                    </a>
                         <div class="product-price-section flex">
                             <button type="button"><b>+</b></button>
                             <p class="product-price"><a href="#">$200</a></p>
                         </div>
-                    </a>
                 </div>
                 <div class="product">
                     <a class="flex" href="#">
@@ -221,11 +221,11 @@
                         <h3>FPS Racing Radiator</h3>
                         <p class="product-state">New</p>
                         <p class="product-location"><b>From</b> San Fransisco California</p>
+                    </a>
                         <div class="product-price-section flex">
                             <button type="button"><b>+</b></button>
                             <p class="product-price"><a href="#">$300</a></p>
                         </div>
-                    </a>
                 </div>
                 <div class="product">
                     <a class="flex" href="#">
@@ -233,11 +233,11 @@
                         <h3>Cometic Oil Change Gasket Kit For Harley 2006-2017</h3>
                         <p class="product-state">New</p>
                         <p class="product-location"><b>From</b> San Fransisco California</p>
+                    </a>
                         <div class="product-price-section flex">
                             <button type="button"><b>+</b></button>
                             <p class="product-price"><a href="#">$11</a></p>
                         </div>
-                    </a>
                 </div>
             </section>
             <div class="section-header flex">
@@ -251,11 +251,11 @@
                         <h3>Maxima 57916 20WT Standard Hydraulic Fork Oil</h3>
                         <p class="product-state">New</p>
                         <p class="product-location"><b>From</b> San Fransisco California</p>
+                    </a>
                         <div class="product-price-section flex">
                             <button type="button"><b>+</b></button>
                             <p class="product-price"><a href="#">$15</a></p>
                         </div>
-                    </a>
                 </div>
                 <div class="product">
                     <a class="flex" href="#">
@@ -263,11 +263,11 @@
                         <h3>Motul 104092 Synthetic Engine Oil</h3>
                         <p class="product-state">New</p>
                         <p class="product-location"><b>From</b> San Fransisco California</p>
+                    </a>
                         <div class="product-price-section flex">
                             <button type="button"><b>+</b></button>
                             <p class="product-price"><a href="#">$25</a></p>
                         </div>
-                    </a>
                 </div>
                 <div class="product">
                     <a class="flex" href="#">
@@ -275,11 +275,11 @@
                         <h3>Motul Dot 4 Brake Fluid 500ml</h3>
                         <p class="product-state">New</p>
                         <p class="product-location"><b>From</b> San Fransisco California</p>
+                    </a>
                         <div class="product-price-section flex">
                             <button type="button"><b>+</b></button>
                             <p class="product-price"><a href="#">$15</a></p>
                         </div>
-                    </a>
                 </div>
                 <div class="product">
                     <a class="flex" href="#">
@@ -287,11 +287,11 @@
                         <h3>Engine Ice High Performance Coolant</h3>
                         <p class="product-state">New</p>
                         <p class="product-location"><b>From</b> San Fransisco California</p>
+                    </a>
                         <div class="product-price-section flex">
                             <button type="button"><b>+</b></button>
                             <p class="product-price"><a href="#">$25</a></p>
                         </div>
-                    </a>
                 </div>
             </section>
             <div class="section-header flex">
@@ -305,11 +305,11 @@
                         <h3>Excel Takasago Rear Rim</h3>
                         <p class="product-state">New</p>
                         <p class="product-location"><b>From</b> San Fransisco California</p>
+                    </a>
                         <div class="product-price-section flex">
                             <button type="button"><b>+</b></button>
                             <p class="product-price"><a href="#">$250</a></p>
                         </div>
-                    </a>
                 </div>
                 <div class="product">
                     <a class="flex" href="#">
@@ -317,11 +317,11 @@
                         <h3>Excel Front Wheel Spoke Set</h3>
                         <p class="product-state">New</p>
                         <p class="product-location"><b>From</b> San Fransisco California</p>
+                    </a>
                         <div class="product-price-section flex">
                             <button type="button"><b>+</b></button>
                             <p class="product-price"><a href="#">$100</a></p>
                         </div>
-                    </a>
                 </div>
                 <div class="product">
                     <a class="flex" href="#">
@@ -329,11 +329,11 @@
                         <h3>Moose Racing Rear Wheel Bearing Kit</h3>
                         <p class="product-state">New</p>
                         <p class="product-location"><b>From</b> San Fransisco California</p>
+                    </a>
                         <div class="product-price-section flex">
                             <button type="button"><b><b>+</b></b></button>
                             <p class="product-price"><a href="#">$35</a></p>
                         </div>
-                    </a>
                 </div>
                 <div class="product">
                     <a class="flex" href="#">
@@ -341,11 +341,11 @@
                         <h3>Drag Specialties Chrome Rear Axle Kit For Harley</h3>
                         <p class="product-state">New</p>
                         <p class="product-location"><b>From</b> San Fransisco California</p>
+                    </a>
                         <div class="product-price-section flex">
                             <button type="button"><b>+</b></button>
                             <p class="product-price"><a href="#">$60</a></p>
                         </div>
-                    </a>
                 </div>
             </section>
         </main>
