--- a/search-results.html
+++ b/search-results.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="initial-scale=1.0"/>
-        <title></title>
+        <title>Mottox Search Capstone Project</title>
         <link rel="stylesheet" type="text/css" href="styles/reset.css"/>
         <link rel="stylesheet" type="text/css" href="styles/fonts.css"/>
         <link rel="stylesheet" type="text/css" href="styles/style.css"/>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-        <script type="text/javascript" src="scripts/script.js"></script>
+        <script src="scripts/script.js"></script>
     </head>
     <body>
         <nav>
@@ -139,12 +139,12 @@
                             <p class="product-state">New</p>
                             <p class="product-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eget fermentum lorem.</p>
                             <p class="product-location"><b>From</b> San Fransisco California</p>
-                            <div class="product-price-section flex">
-                                <button type="button"><b>+</b></button>
-                                <p class="product-price"><a href="#">$25</a></p>
-                            </div>
                         </div>
                     </a>
+                        <div class="product-price-section flex">
+                            <button type="button"><b>+</b></button>
+                            <p class="product-price"><a href="#">$25</a></p>
+                        </div>
                 </div>
                 <div class="product-result product-container">
                     <a class="flex" href="#">
@@ -154,12 +154,12 @@
                             <p class="product-state">New</p>
                             <p class="product-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eget fermentum lorem.</p>
                             <p class="product-location"><b>From</b> San Fransisco California</p>
-                            <div class="product-price-section flex">
-                                <button type="button"><b>+</b></button>
-                                <p class="product-price"><a href="#">$50</a></p>
-                            </div>
                         </div>
                     </a>
+                        <div class="product-price-section flex">
+                            <button type="button"><b>+</b></button>
+                            <p class="product-price"><a href="#">$50</a></p>
+                        </div>
                 </div>
 
                 <div class="product-result product-container">
@@ -170,12 +170,12 @@
                             <p class="product-state">New</p>
                             <p class="product-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eget fermentum lorem.</p>
                             <p class="product-location"><b>From</b> San Fransisco California</p>
-                            <div class="product-price-section flex">
-                                <button type="button"><b>+</b></button>
-                                <p class="product-price"><a href="#">$15</a></p>
-                            </div>
                         </div>
                     </a>
+                        <div class="product-price-section flex">
+                            <button type="button"><b>+</b></button>
+                            <p class="product-price"><a href="#">$15</a></p>
+                        </div>
                 </div>
                 <div class="product-result product-container">
                     <a class="flex" href="#">
@@ -185,12 +185,12 @@
                             <p class="product-state">New</p>
                             <p class="product-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eget fermentum lorem.</p>
                             <p class="product-location"><b>From</b> San Fransisco California</p>
-                            <div class="product-price-section flex">
-                                <button type="button"><b>+</b></button>
-                                <p class="product-price"><a href="#">$50</a></p>
-                            </div>
                         </div>
                     </a>
+                        <div class="product-price-section flex">
+                            <button type="button"><b>+</b></button>
+                            <p class="product-price"><a href="#">$50</a></p>
+                        </div>
                 </div>
                 <div class="product-result product-container">
                     <a class="flex" href="#">
@@ -200,12 +200,12 @@
                             <p class="product-state">New</p>
                             <p class="product-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eget fermentum lorem.</p>
                             <p class="product-location"><b>From</b> San Fransisco California</p>
-                            <div class="product-price-section flex">
-                                <button type="button"><b>+</b></button>
-                                <p class="product-price"><a href="#">$25</a></p>
-                            </div>
                         </div>
                     </a>
+                    <div class="product-price-section flex">
+                        <button type="button"><b>+</b></button>
+                        <p class="product-price"><a href="#">$25</a></p>
+                    </div>
                 </div>
             </section>
         </main>
