added colord backgrounds to the prices in the search-results

--- a/search-results.html
+++ b/search-results.html
@@ -143,7 +143,7 @@
                     </a>
                         <div class="product-price-section flex">
                             <button type="button"><b>+</b></button>
-                            <p class="product-price"><a href="#">$25</a></p>
+                            <p class="product-price-result"><a href="#">$25</a></p>
                         </div>
                 </div>
                 <div class="product-result product-container">
@@ -158,7 +158,7 @@
                     </a>
                         <div class="product-price-section flex">
                             <button type="button"><b>+</b></button>
-                            <p class="product-price"><a href="#">$50</a></p>
+                            <p class="product-price-result"><a href="#">$50</a></p>
                         </div>
                 </div>
 
@@ -174,7 +174,7 @@
                     </a>
                         <div class="product-price-section flex">
                             <button type="button"><b>+</b></button>
-                            <p class="product-price"><a href="#">$15</a></p>
+                            <p class="product-price-result"><a href="#">$15</a></p>
                         </div>
                 </div>
                 <div class="product-result product-container">
@@ -189,7 +189,7 @@
                     </a>
                         <div class="product-price-section flex">
                             <button type="button"><b>+</b></button>
-                            <p class="product-price"><a href="#">$50</a></p>
+                            <p class="product-price-result"><a href="#">$50</a></p>
                         </div>
                 </div>
                 <div class="product-result product-container">
@@ -204,7 +204,7 @@
                     </a>
                     <div class="product-price-section flex">
                         <button type="button"><b>+</b></button>
-                        <p class="product-price"><a href="#">$25</a></p>
+                        <p class="product-price-result"><a href="#">$25</a></p>
                     </div>
                 </div>
             </section>
