fixed js errors

--- a/index.html
+++ b/index.html
@@ -5,12 +5,10 @@
         <meta name="viewport" content="initial-scale=1.0"/>
         <title>Mottox Capstone Project</title>
         <link rel="stylesheet" type="text/css" href="styles/reset.css"/>
-        <link rel="stylesheet" type="text/css" href="styles/fonts.css"/>
         <link rel="stylesheet" type="text/css" href="styles/style.css"/>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
-        <script src="scripts/script.js"></script>
     </head>
     <body>
         <nav>
@@ -137,7 +135,7 @@
                 <p>(spark plugs, lights, dynamo's and navigation)</p>
             </div>
             <section class="product-section">
-                <div class="product">
+                <div class="product flex">
                     <a class="flex" href="#">
                         <img src="images/spark-plug.jpg" alt="spark plug">
                         <h3>CR10EK Ngk Yamaha YZF-R6</h3>
@@ -149,7 +147,7 @@
                             <p class="product-price"><a href="#">$25</a></p>
                         </div>
                 </div>
-                <div class="product">
+                <div class="product flex">
                     <a class="flex" href="#">
                         <img src="images/denali_soundbomb_compact_air_horn_black_750x750.jpg" alt="spark plug">
                         <h3>Denali Soundbomb Compact Air horn</h3>
@@ -161,7 +159,7 @@
                             <p class="product-price"><a href="#">$80</a></p>
                         </div>
                 </div>
-                <div class="product">
+                <div class="product flex">
                     <a class="flex" href="#">
                         <img src="images/rowe_electronics_pdm60_power_distribution_module_750x750.jpg" alt="spark plug">
                         <h3>Rowe Electronics PDM60 Power Distribution Module</h3>
@@ -173,7 +171,7 @@
                             <p class="product-price"><a href="#">$250</a></p>
                         </div>
                 </div>
-                <div class="product">
+                <div class="product flex">
                     <a class="flex" href="#">
                         <img src="images/yuasa_agm_battery_750x750.jpg" alt="spark plug">
                         <h3>Yuasa AGM Battery</h3>
@@ -191,7 +189,7 @@
                 <p>(Clutch Covers, Water Pumps, Radiators and Gaskets)</p>
             </div>
             <section class="product-section">
-                <div class="product">
+                <div class="product flex">
                     <a class="flex" href="#">
                         <img src="images/boyesen_factory_racing_spectra_clutch_cover_black_750x750.jpg" alt="spark plug">
                         <h3>Boyesen Factory Racing Spectra Clutch Cover</h3>
@@ -203,7 +201,7 @@
                             <p class="product-price"><a href="#">$150</a></p>
                         </div>
                 </div>
-                <div class="product">
+                <div class="product flex">
                     <a class="flex" href="#">
                         <img src="images/boyesen_spectra_supercooler_kit_black_750x750.jpg" alt="spark plug">
                         <h3>Boyesen Spectra Supercooler Kit</h3>
@@ -215,7 +213,7 @@
                             <p class="product-price"><a href="#">$200</a></p>
                         </div>
                 </div>
-                <div class="product">
+                <div class="product flex">
                     <a class="flex" href="#">
                         <img src="images/fps_racing_radiator_750x750.jpg" alt="spark plug">
                         <h3>FPS Racing Radiator</h3>
@@ -227,7 +225,7 @@
                             <p class="product-price"><a href="#">$300</a></p>
                         </div>
                 </div>
-                <div class="product">
+                <div class="product flex">
                     <a class="flex" href="#">
                         <img src="images/cometic_gasket_kit_oil_change_750x750.jpg" alt="spark plug">
                         <h3>Cometic Oil Change Gasket Kit For Harley 2006-2017</h3>
@@ -245,7 +243,7 @@
                 <p>{Fork oil, Engine oil, brake fluid and coolant)</p>
             </div>
             <section class="product-section">
-                <div class="product">
+                <div class="product flex">
                     <a class="flex" href="#">
                         <img src="images/61ADuMN5NoL._AC_SY679_.jpg" alt="spark plug">
                         <h3>Maxima 57916 20WT Standard Hydraulic Fork Oil</h3>
@@ -257,7 +255,7 @@
                             <p class="product-price"><a href="#">$15</a></p>
                         </div>
                 </div>
-                <div class="product">
+                <div class="product flex">
                     <a class="flex" href="#">
                         <img src="images/71wCf8cT7ZL._AC_SY606_.jpg" alt="spark plug">
                         <h3>Motul 104092 Synthetic Engine Oil</h3>
@@ -269,7 +267,7 @@
                             <p class="product-price"><a href="#">$25</a></p>
                         </div>
                 </div>
-                <div class="product">
+                <div class="product flex">
                     <a class="flex" href="#">
                         <img src="images/motul-dot-4-brake-fluid-500ml.jpg" alt="spark plug">
                         <h3>Motul Dot 4 Brake Fluid 500ml</h3>
@@ -281,7 +279,7 @@
                             <p class="product-price"><a href="#">$15</a></p>
                         </div>
                 </div>
-                <div class="product">
+                <div class="product flex">
                     <a class="flex" href="#">
                         <img src="images/engine_ice_high_performance_coolant_12_gallon_750x750.jpg" alt="spark plug">
                         <h3>Engine Ice High Performance Coolant</h3>
@@ -299,7 +297,7 @@
                 <p>(Rim, Spokes, Wheel bearings and axle)</p>
             </div>
             <section class="product-section">
-                <div class="product">
+                <div class="product flex">
                     <a class="flex" href="#">
                         <img src="images/excel_takasago_rear_rim_black_1800x1800.jpg" alt="spark plug">
                         <h3>Excel Takasago Rear Rim</h3>
@@ -311,7 +309,7 @@
                             <p class="product-price"><a href="#">$250</a></p>
                         </div>
                 </div>
-                <div class="product">
+                <div class="product flex">
                     <a class="flex" href="#">
                         <img src="images/excel_front_wheel_spoke_set_silver_rollover.jpg" alt="spark plug">
                         <h3>Excel Front Wheel Spoke Set</h3>
@@ -323,7 +321,7 @@
                             <p class="product-price"><a href="#">$100</a></p>
                         </div>
                 </div>
-                <div class="product">
+                <div class="product flex">
                     <a class="flex" href="#">
                         <img src="images/moose_racing_rear_wheel_bearing_kit_rollover.jpg" alt="spark plug">
                         <h3>Moose Racing Rear Wheel Bearing Kit</h3>
@@ -335,7 +333,7 @@
                             <p class="product-price"><a href="#">$35</a></p>
                         </div>
                 </div>
-                <div class="product">
+                <div class="product flex">
                     <a class="flex" href="#">
                         <img src="images/drag_specialties_chrome_rear_axle_kit_for_harley_chrome_750x750.jpg" alt="spark plug">
                         <h3>Drag Specialties Chrome Rear Axle Kit For Harley</h3>
@@ -449,5 +447,6 @@
             </div>
         </footer>
         <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
+        <script src="scripts/script.js"></script>
     </body>
 </html>
