removed the text of the menu links in mobile view

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <nav>
             <div class="nav-logo"><a href="#"><img src="images/navbar-logo.PNG" alt=""></a></div>
             <ul class="flex navbar">
-                <li class="nav-leaf"><a href="#"><i class="fas fa-home"></i>&nbsp; Home</a></li>
-                <li class="nav-leaf"><a href="#"><i class="fas fa-box"></i>&nbsp; Collections</a></li>
-                <li class="nav-leaf"><a href="#"><i class="fas fa-shopping-cart"></i>&nbsp; Purchase List</a></li>
+                <li class="nav-leaf"><a href="#"><i class="fas fa-home"></i><span class="menu-name">&nbsp; Home</span></a></li>
+                <li class="nav-leaf"><a href="#"><i class="fas fa-box"></i><span class="menu-name">&nbsp; Collections</span></a></li>
+                <li class="nav-leaf"><a href="#"><i class="fas fa-shopping-cart"></i><span class="menu-name">&nbsp; Purchase List</span></a></li>
                 <li class="extra-leaf"><button type="button">post an add</button></li>
             </ul>
             <div class="nav-small-list-container">
